# netpulse

./: .gitignore  README.md  index.html  package.json  tailwind.config.ts  tsconfig.node.json
.github/workflows/: build.yml
scripts/: setup-linux.sh  setup-windows.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/alerts/: mod.rs  rules.rs
src-tauri/src/capture/: mod.rs  packet_parser.rs  process_mapper.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/geo/: dns_resolver.rs  mod.rs
src-tauri/src/tray/: mod.rs
src/components/Alerts/: AlertsPanel.tsx
src/components/DNS/: DNSLeakView.tsx
src/components/Dashboard/: AppSummary.tsx  BandwidthGraph.tsx  LiveTable.tsx
src/components/History/: HistoryView.tsx
src/components/Map/: GeoMap.tsx
src/components/Settings/: SettingsPanel.tsx
src/components/shared/: AppBadge.tsx  CountryFlag.tsx  StatCard.tsx
src/hooks/: useAlerts.ts  useSettings.ts  useTrafficFeed.ts
src/store/: trafficStore.ts
src/styles/: globals.css
