[package]
name = "netpulse"
version = "1.0.0"
description = "Real-time network traffic visualizer"
authors = ["NetPulse Team"]
edition = "2021"

[lib]
name = "netpulse_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
dashmap = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
maxminddb = "0.24"
log = "0.4"
env_logger = "0.11"
csv = "1.3"
once_cell = "1"

[target.'cfg(target_os = "linux")'.dependencies]
pcap = "2"
pnet = "0.35"
hickory-resolver = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
pcap = "2"
pnet = "0.35"
hickory-resolver = "0.24"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
